pix with captions

--- a/src/drafts/riveting.mdx
+++ b/src/drafts/riveting.mdx
@@ -5,6 +5,8 @@ date: "2020-08-04"
 tags: ["jeans", "rivets", "garments"]
 ---
 
+import CapBox from "../components/caption_box.js"
+
 ![My jeans-riveting workspace](../images/rivets/cover.jpg)
 
 Ok, how do you people rivet your jeans? This is literally my 5th pair and I'm still struggling. 
@@ -25,7 +27,23 @@ If you bang on it in a lopsided way, you can produced a smashed, lopsided result
 My first pair of jeans has some quite exotic, crumply-looking rivets.
 I also had to re-install at least one of them because it fell out shortly after putting it in my closet, which is an alarming situation for a sewist because it leaves a raw open hole in the garment you just spent days (weeks?) hand-crafting.
 
-![Rivet attempts from my first pair of jeans](../images/rivets/cover.jpg)
+
+<!--<p class="width500 lineheight1">
+    <img 
+        alt="A collage of crumply rivets on my first pair of jeans, including one with a crack in the cap and my rivet-less back pockets because I gave up after five rivets :)" 
+        src="../images/rivets/crumply_rivet_collage.png"
+    />
+    <em>Yes I made my first pair of jeans out of black, brown, and gold non-denim.</em>
+</p>
+-->
+
+
+<CapBox width="500px">
+
+![A collage of crumply rivets on my first pair of jeans, including one with a crack in the cap and my rivet-less back pockets because I gave up after five rivets :)](../images/rivets/crumply_rivet_collage.png)
+    *Yes I made my first pair of jeans out of black, brown, and gold non-denim.*
+
+</CapBox>
 
 By my third pair of Gingers, I'd gotten more consistent at putting in rivets, but it was still taking me a good chunk of time. 
 So I decided to invest in a rivet press.
