mdx emoji support

--- a/src/drafts/riveting.mdx
+++ b/src/drafts/riveting.mdx
@@ -57,7 +57,7 @@ On the bright side, the rivet cap tends to look a litte smoother than when I was
 Also I could do my riveting at the kitchen table, instead of kneeling on the concrete floor of our side patio, which is what I was doing before. 
 I figured that, much like with the hammered rivets, I would improve with practice, and that with another couple of pairs of jeans I would be a rivet-installing machine! 
 
-Today I riveted my 5th pair of jeans (blog post coming soon hehe), and EMOJI HERE UGGGHHHHHHHH
+Today I riveted my 5th pair of jeans (blog post coming soon hehe), and :confounded: UGGGHHHHHHHH
 
 I could not get the press to work for my life.
 The cap kept getting stuck in the die, the little cylindar-shaped piece that holds it in place. 
