--- a/src/posts/riveting.mdx
+++ b/src/posts/riveting.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Riveting stuff"
 status: "published"
-date: "2020-08-04"
+date: "2020-08-09"
 tags: ["jeans", "rivets", "garments"]
 ---
 
@@ -12,7 +12,7 @@ import CapBox from "../components/caption_box.js"
 Ok, how do you people rivet your jeans? This is literally my 5th pair and I'm still struggling. 
 
 The first time I put rivets on anything was my first pair of Ginger Jeans (I've now made several pairs of Gingers, so shout-out to [Closet Core Patterns](https://www.closetcorepatterns.com/) for drafting an excellent pattern!!!).
-If I recall correctly, I followed the online tutorials from Closet Core patterns: [this blog post with pictures](https://www.closetcorepatterns.com/ginger-sewalong-pt-14-installing-denim-rivets-buttons/) and [this helpful video tutorial from Heather Lou](use://www.youtube.com/watch?v=F8xL1q1wvUE).
+If I recall correctly, I followed the online tutorials from Closet Core patterns: [this blog post with pictures](https://www.closetcorepatterns.com/ginger-sewalong-pt-14-installing-denim-rivets-buttons/) and [this helpful video tutorial from Heather Lou](http://www.youtube.com/watch?v=F8xL1q1wvUE).
 Heather Lou makes installing rivets look really easy.
 It's not. 
 
@@ -28,44 +28,55 @@ My first pair of jeans has some quite exotic, crumply-looking rivets.
 I also had to re-install at least one of them because it fell out shortly after putting it in my closet, which is an alarming situation for a sewist because it leaves a raw open hole in the garment you just spent days (weeks?) hand-crafting.
 
 
-<!--<p class="width500 lineheight1">
-    <img 
-        alt="A collage of crumply rivets on my first pair of jeans, including one with a crack in the cap and my rivet-less back pockets because I gave up after five rivets :)" 
-        src="../images/rivets/crumply_rivet_collage.png"
-    />
-    <em>Yes I made my first pair of jeans out of black, brown, and gold non-denim.</em>
-</p>
--->
-
-
 <CapBox width="500px">
 
 ![A collage of crumply rivets on my first pair of jeans, including one with a crack in the cap and my rivet-less back pockets because I gave up after five rivets :)](../images/rivets/crumply_rivet_collage.png)
-    *Yes I made my first pair of jeans out of black, brown, and gold non-denim.*
+    *I made my first pair of "jeans" out of black, brown, and gold non-denim. They don't quite fit like jeans, but they turned out pretty cool!*
 
 </CapBox>
 
 By my third pair of Gingers, I'd gotten more consistent at putting in rivets, but it was still taking me a good chunk of time. 
 So I decided to invest in a rivet press.
 
+<CapBox width="500px">
+
+![My (bright pink) rivet press](../images/rivets/press.jpg)
+
+</CapBox>
+
 I used the press on my 4th pair of Gingers (I wear a lot of skinny jeans, ok!). 
 I kind of hoped the press would magically work perfectly and I could have a perfectly installed rivet with a snap of my fingers. 
 It did not.
 You still have to clip the rivets to the right height.
 Sometimes you push the press down and the rivet doesn't stick. 
-On the bright side, the rivet cap tends to look a litte smoother than when I was hammering it.
+On the bright side, the rivet cap tends to look a little smoother than when I was hammering it.
 Also I could do my riveting at the kitchen table, instead of kneeling on the concrete floor of our side patio, which is what I was doing before. 
 I figured that, much like with the hammered rivets, I would improve with practice, and that with another couple of pairs of jeans I would be a rivet-installing machine! 
 
 Today I riveted my 5th pair of jeans (blog post coming soon hehe), and :confounded: UGGGHHHHHHHH
 
 I could not get the press to work for my life.
-The cap kept getting stuck in the die, the little cylindar-shaped piece that holds it in place. 
+The cap kept getting stuck in the die, the little cylinder-shaped piece that holds it in place. 
 Even if the rivet held at first, it usually fell apart as I tried to yank free the cap.
 I tried covering the cap with a thin rag before placing it into the die; this helped a little with the wedging problem (and had the amusing side-effect of punching perfect rivet-sized circles into the rag). 
 But it didn't produce many more good rivets; they kept not sticking or getting deformed as the rag slipped against the die.
+(To be fair to the rivet press, it worked perfectly on the button.)
+
+<CapBox>
+
+![My inside rivet-hammering station](../images/rivets/rivets_station_inside.jpg)
+*My inside rivet-hammering station, replete with all the necessary tools.*
+
+</CapBox>
 
 Stinging with defeat, bitterly swallowing the uselessness of my much-anticipated riveting press, I returned to my original option: the hammer. 
+
+<CapBox>
+
+![My outside rivet-hammering station](../images/rivets/rivets_station_outside.jpg)
+*My outside rivet-installing station: the old-fashioned way, with a hammer.*
+
+</CapBox>
 
 I got the rivets on there eventually, but I feel like at this point it should not take me many hours and several rounds of debugging to install 7 rivets.
 Does anyone have any insight into this riveting problem? 
@@ -74,4 +85,12 @@ Can you recommend tutorials?
 Does it work consistently?
 How long does it take? 
 Help! 
+
+
+<CapBox>
+
+![One of the rivets on my new pair of jeans](../images/rivets/example_rivet.jpg)
+*It's a little funky-looking, but it's on there!*
+
+</CapBox>
 
