Initial SEO including page title

--- a/src/posts/riveting.mdx
+++ b/src/posts/riveting.mdx
@@ -3,6 +3,7 @@ title: "Riveting stuff"
 status: "published"
 date: "2020-08-09"
 tags: ["jeans", "rivets", "garments"]
+description: "5 pairs of jeans later, I'm still struggling with rivets"
 ---
 
 import CapBox from "../components/caption_box.js"
